# permitlayer

./: .gitignore  Cargo.toml  README.md  SECURITY.md  deny.toml  dist-workspace.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/permitlayer-core/: Cargo.toml
crates/permitlayer-core/src/: lib.rs
crates/permitlayer-core/src/agent/: identity.rs  mod.rs
crates/permitlayer-core/src/store/: error.rs  mod.rs
crates/permitlayer-core/src/store/fs/: agent_fs.rs  credential_fs.rs
crates/permitlayer-core/src/vault/: lock.rs  mod.rs
crates/permitlayer-core/tests/: kill9_recovery.rs  vault_lock_conformance.rs
crates/permitlayer-core/tests/store_compile_fail/pass/: store_accepts_sealed.rs
crates/permitlayer-credential/src/: lib.rs  sealed.rs
crates/permitlayer-daemon/: Cargo.toml
crates/permitlayer-daemon/src/: main.rs
crates/permitlayer-daemon/src/cli/: autostart.rs  credentials.rs  mod.rs  setup.rs  start.rs
crates/permitlayer-daemon/src/cli/rotate_key/: keystore_clear_previous.rs  marker.rs  mod.rs  resume.rs  rotation.rs  state.rs
crates/permitlayer-daemon/src/cli/uninstall/: binary.rs  mod.rs
crates/permitlayer-daemon/src/cli/update/: daemon.rs  diskspace.rs  github.rs  migrations.rs  mod.rs  swap.rs  verify.rs
crates/permitlayer-daemon/src/cli/update/migrations/: envelope_v1_to_v2.rs  mod.rs
crates/permitlayer-daemon/src/lifecycle/: pid.rs
crates/permitlayer-daemon/src/lifecycle/autostart/: linux.rs  macos.rs  mod.rs  windows.rs
crates/permitlayer-daemon/src/server/: control.rs
crates/permitlayer-daemon/src/telemetry/: filter.rs
crates/permitlayer-daemon/tests/common/: mod.rs
crates/permitlayer-daemon/tests/integration/: agent_registry_e2e.rs  approval_prompt_e2e.rs  audit_follow.rs  daemon_lifecycle.rs  envelope_v1_to_v2_e2e.rs  logs_audit_isolation_e2e.rs  logs_command_e2e.rs  master_key_bootstrap_e2e.rs  mod.rs  rotate_key_crash_resume_e2e.rs  rotate_key_e2e.rs  status_connections_e2e.rs  uninstall_e2e.rs  update_e2e.rs
crates/permitlayer-keystore/src/: file_backed.rs  keyring_shared.rs  lib.rs  linux.rs  macos.rs  passphrase.rs  windows.rs
crates/permitlayer-keystore/tests/: conformance.rs
crates/permitlayer-oauth/: Cargo.toml
crates/permitlayer-oauth/src/google/: consent.rs
crates/permitlayer-plugins/: Cargo.toml
crates/permitlayer-proxy/: Cargo.toml
crates/permitlayer-proxy/src/: error.rs  service.rs
crates/permitlayer-proxy/src/middleware/: auth.rs
crates/permitlayer-proxy/tests/integration/: mcp_conformance.rs  mcp_transport.rs  proxy_service.rs  refresh_integration.rs
crates/permitlayer-vault/: Cargo.toml
crates/permitlayer-vault/src/: lib.rs  master_key.rs  rotation.rs  seal.rs
crates/permitlayer-vault/tests/: roundtrip_proptest.rs
docs/adrs/: 0005-release-automation-identity.md  index.md
docs/operations/: release-verification-log.md
docs/user-guide/: install.md
install/: install.ps1
install/Formula/: agentsso.rb
install/clawhub/agentsso-gateway/: README.md  SKILL.md
scripts/: homebrew-service-block.rb.snippet  patch-homebrew-formula.sh  test-install-ps1.ps1  test-patch-homebrew-formula.sh
test-fixtures/homebrew/: expected-output.rb  input-formula.rb
test-fixtures/update/: README.md  test-pubkey.pub  test-seckey.key
xtask/: Cargo.toml
