[package]
name = "permitlayer-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "agentsso binary: axum server, CLI, lifecycle management"

# Story 8.8b: collapse 23 `tests/*.rs` integration files into one
# binary. See tests/integration/mod.rs for submodules and
# tests/README.md for the rationale + new-test-file convention.
autotests = false

[[bin]]
name = "agentsso"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[dependencies]
permitlayer-proxy.workspace = true
permitlayer-oauth.workspace = true
permitlayer-vault.workspace = true
# `test-seam` enables `PassphraseKeyStore::from_passphrase` as a `pub`
# constructor so the debug-assertion-gated `AGENTSSO_TEST_PASSPHRASE`
# env var in `cli/start.rs::ensure_master_key_bootstrapped` can use it
# to route integration tests through the real `bootstrap_from_keystore`
# path. The feature is a no-op in release builds because the only
# caller lives behind `#[cfg(debug_assertions)]` and compiles out.
permitlayer-keystore = { workspace = true, features = ["test-seam"] }
permitlayer-core.workspace = true
permitlayer-credential.workspace = true
permitlayer-plugins.workspace = true
# Story 6.2 AD2: the debug-only `/v1/debug/plugin-echo` handler
# drives JS-side Promise resolution via `Promise::finish`. Already
# compiled transitively via permitlayer-plugins, so adding it as
# a direct dep here adds zero C-code build cost — it just makes
# `rquickjs::Value` and `rquickjs::String` directly nameable from
# the handler. The handler itself is gated by
# `#[cfg(debug_assertions)]` so release builds don't include the
# code path. (H19 re-review finding was about this dep — we
# concluded the cost is already paid via the transitive dep.)
rquickjs.workspace = true
clap.workspace = true
anyhow.workspace = true
figment.workspace = true
toml.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
arc-swap.workspace = true
dashmap.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
ulid.workspace = true
dirs.workspace = true
thiserror.workspace = true
chrono.workspace = true
tempfile.workspace = true
dialoguer.workspace = true
console.workspace = true
indicatif.workspace = true
crossterm.workspace = true
unicode-width.workspace = true
async-trait.workspace = true
hkdf.workspace = true
sha2.workspace = true
zeroize.workspace = true
reqwest.workspace = true
url.workspace = true
notify.workspace = true
csv.workspace = true
# Story 7.5 — `agentsso update`. minisign-verify for ed25519 release
# signature verification (same `install/permitlayer.pub` key that
# install.sh + install.ps1 use); flate2 + tar for unpacking the
# `dist`-produced `.tar.gz` archives; semver for version comparison.
minisign-verify = { workspace = true }
flate2 = "1.0"
tar = { workspace = true }
semver = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix.workspace = true
# Story 7.5 — `rustix::fs::statvfs` for the disk-space pre-flight.
# POSIX-only; the Windows path uses a PowerShell shell-out fallback.
rustix = { workspace = true }

[build-dependencies]
serde_json.workspace = true

[dev-dependencies]
rmcp = { version = "1.3", features = ["client", "transport-streamable-http-client-reqwest"] }
insta = { workspace = true }
http-body-util.workspace = true
# Needed by the `FailingAuditStore` test fixture in `server::control::tests`
# to impl the `AuditStore` trait (which is defined via `#[async_trait]`).
async-trait.workspace = true
# Story 7.5 update_e2e — mock GitHub Releases API for the in-place
# update flow's integration test.
mockito = { workspace = true }
# Story 7.5 review patch P22 (F26): test-only minisign signer for
# building the signed fixture archive served by the apply-flow
# integration test. Same trust-root family as `minisign-verify`
# (production-side dep at workspace level); zero impact on release
# builds since this is dev-deps only.
minisign = "0.9"

[lints]
workspace = true
