[package]
name = "permitlayer-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Master key lifecycle and seal/unseal for permitlayer credentials."

[dependencies]
permitlayer-credential.workspace = true
permitlayer-keystore.workspace = true
thiserror.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
hmac.workspace = true
rand.workspace = true
zeroize.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
